Flutter_Frontend/Badminton/build_err.txt
Resolving dependencies...
Downloading packages...
  _fe_analyzer_shared 85.0.0 (97.0.0 available)
  _flutterfire_internals 1.3.59 (1.3.67 available)
  analyzer 7.6.0 (11.0.0 available)
  analyzer_plugin 0.13.4 (0.14.5 available)
  archive 4.0.7 (4.0.9 available)
  build 2.5.4 (4.0.4 available)
  build_config 1.1.2 (1.3.0 available)
  build_resolvers 2.5.4 (3.0.4 available)
  build_runner 2.5.4 (2.12.2 available)
  build_runner_core 9.1.2 (9.3.2 available)
  built_value 8.12.3 (8.12.4 available)
  characters 1.4.0 (1.4.1 available)
  connectivity_plus 5.0.2 (7.0.0 available)
  connectivity_plus_platform_interface 1.2.4 (2.0.1 available)
  custom_lint_core 0.7.5 (0.8.2 available)
  custom_lint_visitor 1.0.0+7.7.0 (1.0.0+9.0.0 available)
  dart_style 3.1.1 (3.1.6 available)
  dbus 0.7.11 (0.7.12 available)
  dio 5.9.1 (5.9.2 available)
  dio_web_adapter 2.1.1 (2.1.2 available)
  ffi 2.1.5 (2.2.0 available)
  firebase_core 3.15.2 (4.5.0 available)
  firebase_core_web 2.24.1 (3.5.0 available)
  firebase_messaging 15.2.10 (16.1.2 available)
  firebase_messaging_platform_interface 4.6.10 (4.7.7 available)
  firebase_messaging_web 3.10.10 (4.1.3 available)
  fl_chart 0.65.0 (1.1.1 available)
  flutter_riverpod 2.6.1 (3.2.1 available)
  flutter_secure_storage 9.2.4 (10.0.0 available)
  flutter_secure_storage_linux 1.2.3 (3.0.0 available)
  flutter_secure_storage_macos 3.1.3 (4.0.0 available)
  flutter_secure_storage_platform_interface 1.1.2 (2.0.1 available)
  flutter_secure_storage_web 1.2.1 (2.1.0 available)
  flutter_secure_storage_windows 3.1.2 (4.1.0 available)
  go_router 12.1.3 (17.1.0 available)
  google_fonts 6.3.3 (8.0.2 available)
  hooks 1.0.0 (1.0.2 available)
  image 4.5.4 (4.8.0 available)
  image_cropper 8.1.0 (11.0.0 available)
  image_cropper_for_web 6.1.0 (7.0.0 available)
  image_cropper_platform_interface 7.2.0 (8.0.0 available)
  image_picker_android 0.8.13+13 (0.8.13+14 available)
  intl 0.18.1 (0.20.2 available)
  js 0.6.7 (0.7.2 available)
  json_annotation 4.10.0 (4.11.0 available)
  matcher 0.12.17 (0.12.19 available)
  material_color_utilities 0.11.1 (0.13.0 available)
  meta 1.17.0 (1.18.1 available)
  native_toolchain_c 0.17.4 (0.17.5 available)
  objective_c 9.2.5 (9.3.0 available)
  petitparser 7.0.1 (7.0.2 available)
  posix 6.0.3 (6.5.0 available)
  riverpod 2.6.1 (3.2.1 available)
  riverpod_annotation 2.6.1 (4.0.2 available)
  riverpod_generator 2.6.5 (4.0.3 available)
  shared_preferences_android 2.4.20 (2.4.21 available)
  source_gen 2.0.0 (4.2.0 available)
  source_span 1.10.1 (1.10.2 available)
  table_calendar 3.0.9 (3.2.0 available)
  test 1.26.3 (1.30.0 available)
  test_api 0.7.7 (0.7.10 available)
  test_core 0.6.12 (0.6.16 available)
  url_launcher_ios 6.3.6 (6.4.1 available)
  uuid 4.5.2 (4.5.3 available)
  video_player 2.10.1 (2.11.0 available)
  video_player_android 2.9.1 (2.9.4 available)
  video_player_avfoundation 2.9.0 (2.9.4 available)
  win32 5.15.0 (6.0.0 available)
Got dependencies!
68 packages have newer versions incompatible with dependency constraints.
Try `flutter pub outdated` for more information.
Running Gradle task 'assembleRelease'...                        
Checking the license for package Android SDK Platform 28 in C:\Users\arshi\AppData\Local\Android\Sdk\licenses
License for package Android SDK Platform 28 accepted.
Preparing "Install Android SDK Platform 28 (revision 6)".
"Install Android SDK Platform 28 (revision 6)" ready.
Installing Android SDK Platform 28 in C:\Users\arshi\AppData\Local\Android\Sdk\platforms\android-28
"Install Android SDK Platform 28 (revision 6)" complete.
"Install Android SDK Platform 28 (revision 6)" finished.
[=========                              ] 25%                                   
[=========                              ] 25% Fetch remote repository...        
[=======================================] 100% Fetch remote repository...       

warning: [options] source value 8 is obsolete and will be removed in a future release
warning: [options] target value 8 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
C:\Users\arshi\AppData\Local\Pub\Cache\hosted\pub.dev\flutter_windowmanager-0.2.0\android\src\main\java\io\adaptant\labs\flutter_windowmanager\FlutterWindowManagerPlugin.java:17: error: cannot find symbol
import io.flutter.plugin.common.PluginRegistry.Registrar;
                                              ^
  symbol:   class Registrar
  location: interface PluginRegistry
C:\Users\arshi\AppData\Local\Pub\Cache\hosted\pub.dev\flutter_windowmanager-0.2.0\android\src\main\java\io\adaptant\labs\flutter_windowmanager\FlutterWindowManagerPlugin.java:32: error: cannot find symbol
  public static void registerWith(Registrar registrar) {
                                  ^
  symbol:   class Registrar
  location: class FlutterWindowManagerPlugin
2 errors
3 warnings
Font asset "CupertinoIcons.ttf" was tree-shaken, reducing it from 257628 to 848 bytes (99.7% reduction). Tree-shaking can be disabled by providing the --no-tree-shake-icons flag when building your app.
Font asset "MaterialIcons-Regular.otf" was tree-shaken, reducing it from 1645184 to 25404 bytes (98.5% reduction). Tree-shaking can be disabled by providing the --no-tree-shake-icons flag when building your app.

FAILURE: Build completed with 2 failures.

1: Task failed with an exception.
-----------
* What went wrong:
Execution failed for task ':flutter_windowmanager:compileReleaseJavaWithJavac'.
> Compilation failed; see the compiler output below.
  warning: [options] target value 8 is obsolete and will be removed in a future release
  warning: [options] source value 8 is obsolete and will be removed in a future release
  C:\Users\arshi\AppData\Local\Pub\Cache\hosted\pub.dev\flutter_windowmanager-0.2.0\android\src\main\java\io\adaptant\labs\flutter_windowmanager\FlutterWindowManagerPlugin.java:17: error: cannot find symbol
  import io.flutter.plugin.common.PluginRegistry.Registrar;
                                                ^
    symbol:   class Registrar
    location: interface PluginRegistry
  C:\Users\arshi\AppData\Local\Pub\Cache\hosted\pub.dev\flutter_windowmanager-0.2.0\android\src\main\java\io\adaptant\labs\flutter_windowmanager\FlutterWindowManagerPlugin.java:32: error: cannot find symbol
    public static void registerWith(Registrar registrar) {
                                    ^
    symbol:   class Registrar
    location: class FlutterWindowManagerPlugin
  warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
  2 errors
  3 warnings

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.
==============================================================================

2: Task failed with an exception.
-----------
* What went wrong:
Execution failed for task ':flutter_jailbreak_detection:compileReleaseKotlin'.
> Inconsistent JVM Target Compatibility Between Java and Kotlin Tasks
    Inconsistent JVM Target Compatibility Between Java and Kotlin Tasks
      Inconsistent JVM-target compatibility detected for tasks 'compileReleaseJavaWithJavac' (1.8) and 'compileReleaseKotlin' (21).

* Try:
> Consider using JVM Toolchain: https://kotl.in/gradle/jvm/toolchain
> Run with --scan to get full insights.
==============================================================================

BUILD FAILED in 1m 34s
Running Gradle task 'assembleRelease'...                           95.2s
Gradle task assembleRelease failed with exit code 1
